--- a/css/login.css
+++ b/css/login.css
@@ -6,10 +6,10 @@ body{
   background-color: #F5F5F5;
 }
 header{
-  display: flex;
-  align-items: center;
+  display: block;
+  text-align: center;
   background-color:  #FFFD7E;
-  height: 13rem;
+  height: 10rem;
 }
 .container {
 	max-width: 500px;
@@ -44,7 +44,7 @@ input[type="password"] {
   border: 2px solid #000;
 }
 
-input[type="submit"] {
+button {
 	background-color: #ED8811;
 	color: #ffffff;
 	border: none;
@@ -53,14 +53,22 @@ input[type="submit"] {
 	cursor: pointer;
 }
 
-input[type="submit"]:hover {
+button:hover {
 	background-color: #8f510a;
 }
 
 p{
   text-align: center;
 }
+a{
+  text-decoration: none;
+  color: #ED8811;
+}
 
+a:hover{
+  text-decoration: underline;
+  color: #8f510a;
+}
 
 /* Estilos para medidas mayores a 1023px */
 @media (max-width: 1023px) {
@@ -85,7 +93,7 @@ p{
     }
   }
   
-  /* Estilos para medidas mayores a 768px y menores o iguales a 1023px */
+  
   @media (max-width: 768px) {
     header {
       display: flex;
