--- a/css/detalle.css
+++ b/css/detalle.css
@@ -19,3 +19,27 @@ Gris #F5F5F5 */
 .p-titulo{
     font-size: xx-large;
 }
+
+/* para un ancho máximo de 1023px */
+@media only screen and (max-width: 1023px) {
+    .container {
+      flex-direction: column;
+    }
+  }
+  
+  /* para un ancho máximo de 768px */
+  @media only screen and (max-width: 768px) {
+    .container {
+      flex-direction: column;
+      align-items: center;
+    }
+  
+    .img-codigo {
+      order: 2;
+    }
+  
+    .texto-precio {
+      text-align: center;
+    }
+  }
+  
